# Simple_2DEngine

./: CMakeLists.txt  CMakePresets.json  README.md  index.md
Binaries/x64-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Binaries/x64-debug/.cmake/api/v1/reply/: cache-v2-709622829c6380369856.json  cmakeFiles-v1-576e667040a8146e5707.json  codemodel-v2-e378dd3d526d215301df.json  index-2022-07-17T02-02-21-0737.json  target-Simple_2DEngine-Debug-1ceef943d9834fe690e9.json
Binaries/x64-debug/Engine/: Simple_2DEngine.ilk  cmake_install.cmake
Engine/: CMakeLists.txt  Simple_2DEngine.cpp  Simple_2DEngine.h
